--- a/projrct2/project2.html
+++ b/projrct2/project2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Webpage Design</title>
-    <link rel="stylesheet" href="prince,project2.css">
+    <link rel="stylesheet" href="project2.css">
 </head>
 <body>
 
